[package]
name = "citybike-stations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] } # reqwest with JSON parsing support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.1"

[[bin]]
name = "citybike-stations"
test = false
bench = false
